# reviewable-html-workbench

./: .gitignore  .plugin-scanner.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRDPARTY.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/rules/: project-management.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: claude-design-renderer-redesign-handoff-template.md  claude-design-renderer-redesign-prompt.md  codex-plugin-packaging.md  design.html  development-flow.md  development-plan.html  publish-output.md
hooks/: hooks.json  plan-preview-cleanup.sh  plan-preview-gate.sh
schemas/: comments.schema.json  document-model.schema.json  preview-session.schema.json
scripts/: build_skill_docs.py
templates/: report.html.j2  review-comments.js  style.css
tests/: test_add_reply.py  test_cli_helpers.py  test_codex_skill_integration.py  test_comment_store.py  test_comments_file_watcher.py  test_common.py  test_event_bus.py  test_ingest_review.py  test_kill_review_preview_helper.py  test_model_builder.py  test_model_quality.py  test_plan_preview.py  test_plugin_dev_switch.py  test_preview_server.py  test_project_layout.py  test_publish.py  test_render_diagram_zoom.py  test_render_gate_warning.py  test_renderer_bundle.py  test_resolution_gate.py  test_review_comments_js.py  test_schema_validation.py  test_skill_docs_generation.py  test_watch_comments.py
(+89 files in other folders)
